<resources>
    <string name="app_name">Daily Burn</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="fittrack">FitTrack</string>
    <string name="logo">Logo</string>
    <string name="confirmPassword">Confirm Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bmi">BMI</string>
    <string name="home">Home</string>
    <string name="steps">Steps</string>
    <string name="tips">Tips</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="omar_alofaysan">Omar Alofaysan</string>
    <string name="team_member">Team Member</string>
    <string name="mohammed_alrokayan">Mohammed Alrokayan</string>
    <string name="adeeb_alnoubi">Adeeb Alnoubi</string>
    <string name="hadeel_alblushi">Hadeel Alblushi</string>
    <string name="_21944">21944</string>
    <string name="course_registration_number">Course Registration Number</string>
    <string name="tip">Tip</string>
    <string name="all_fitness_tips">All Fitness Tips</string>
    <string name="weekly_progress">Weekly Progress</string>
    <string name="set_goal">Set Goal</string>
    <string name="distance">Distance</string>
    <string name="_0_00_km">0.00 km</string>
    <string name="calories">Calories</string>
    <string name="_0_cal">0 cal</string>
    <string name="goal_10_000_steps">Goal: 10,000 steps</string>
    <string name="_0">0</string>
    <string name="today">Today</string>
    <string name="daily_steps">Daily Steps</string>
    <string name="bmi_history">BMI History</string>
    <string name="save_result">Save Result</string>
    <string name="your_bmi_result">Your BMI Result</string>
    <string name="calculate_bmi">Calculate BMI</string>
    <string name="height_cm">Height (cm)</string>
    <string name="enter_your_measurements">Enter your measurements</string>
    <string name="weight_kg">Weight (kg)</string>
    <string name="bmi_calculator">BMI Calculator</string>
    <string name="calculate_your_body_mass_index_bmi_to_check_if_you_re_at_a_healthy_weight">Calculate your Body Mass Index (BMI) to check if you\'re at a healthy weight.</string>
    <string name="no_bmi_history_found_calculate_and_save_your_first_bmi">No BMI history found. Calculate and save your first BMI!</string>
</resources>